[tool.poetry]
name = "prime_rf2877"
version = "0.1.0"
description = "Generating and Verfiying Primes"
authors = ["Ruining Feng"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
sphinx-autoapi = "1.8.1"
sphinx = "^3.5"
sphinx-rtd-theme = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
